Bug 1024144 - Deliver acquire fence to HwComposer. r=sushil, r=nical, a=2.0+